<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingTop="12dp"
    android:paddingEnd="24dp"
    android:paddingBottom="8dp">

    <TextView
        android:id="@+id/offset_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFeatureSettings="tnum"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.google.android.material.slider.Slider
        android:id="@+id/offset_slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/subtitle_offset_slider_description"
        android:stepSize="0.1"
        android:value="0"
        android:valueFrom="-600"
        android:valueTo="600"
        app:labelBehavior="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/offset_decrease"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtitle_offset_decrease" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/offset_reset"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtitle_offset_reset" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/offset_increase"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtitle_offset_increase" />

    </LinearLayout>

</LinearLayout>
